--- a/first_attn_look.ipynb
+++ b/first_attn_look.ipynb
@@ -19,9 +19,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-06-26 03:17:32 __main__ INFO     torch.__version__='2.5.1+cu121', torch.version.cuda='12.1'\n",
-      "2025-06-26 03:17:32 __main__ INFO     torch.cuda.is_available()=True, torch.cuda.device_count()=1, torch.cuda.get_device_name()='NVIDIA RTX A6000'\n",
-      "2025-06-26 03:17:32 __main__ INFO     transformers.__version__='4.52.4'\n"
+      "2025-06-27 04:33:27 __main__ INFO     torch.__version__='2.7.1+cu126', torch.version.cuda='12.6'\n",
+      "2025-06-27 04:33:27 __main__ INFO     torch.cuda.is_available()=True, torch.cuda.device_count()=8, torch.cuda.get_device_name()='NVIDIA A100 80GB PCIe'\n",
+      "2025-06-27 04:33:27 __main__ INFO     transformers.__version__='4.53.0'\n"
      ]
     }
    ],
@@ -35,7 +35,7 @@
     "\n",
     "##################################################################\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0,1,2,3,4,5,6,7\"\n",
     "##################################################################\n",
     "\n",
     "import logging\n",
@@ -63,23 +63,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2025-06-26 03:17:32 src.utils.training_utils WARNING   Model meta-llama/Llama-3.2-1B-Instruct not supported  Only 1 GPU(s) available using default device map = `auto`.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'auto'"
+       "{'model.embed_tokens': 7,\n",
+       " 'model.norm': 7,\n",
+       " 'model.rotary_emb': 7,\n",
+       " 'lm_head': 7,\n",
+       " 'model.layers.0': 0,\n",
+       " 'model.layers.1': 1,\n",
+       " 'model.layers.2': 2,\n",
+       " 'model.layers.3': 3,\n",
+       " 'model.layers.4': 4,\n",
+       " 'model.layers.5': 5,\n",
+       " 'model.layers.6': 6,\n",
+       " 'model.layers.7': 7,\n",
+       " 'model.layers.8': 0,\n",
+       " 'model.layers.9': 1,\n",
+       " 'model.layers.10': 2,\n",
+       " 'model.layers.11': 3,\n",
+       " 'model.layers.12': 4,\n",
+       " 'model.layers.13': 5,\n",
+       " 'model.layers.14': 6,\n",
+       " 'model.layers.15': 7,\n",
+       " 'model.layers.16': 0,\n",
+       " 'model.layers.17': 1,\n",
+       " 'model.layers.18': 2,\n",
+       " 'model.layers.19': 3,\n",
+       " 'model.layers.20': 4,\n",
+       " 'model.layers.21': 5,\n",
+       " 'model.layers.22': 6,\n",
+       " 'model.layers.23': 7,\n",
+       " 'model.layers.24': 0,\n",
+       " 'model.layers.25': 1,\n",
+       " 'model.layers.26': 2,\n",
+       " 'model.layers.27': 3,\n",
+       " 'model.layers.28': 4,\n",
+       " 'model.layers.29': 5,\n",
+       " 'model.layers.30': 6,\n",
+       " 'model.layers.31': 7,\n",
+       " 'model.layers.32': 0,\n",
+       " 'model.layers.33': 1,\n",
+       " 'model.layers.34': 2,\n",
+       " 'model.layers.35': 3,\n",
+       " 'model.layers.36': 4,\n",
+       " 'model.layers.37': 5,\n",
+       " 'model.layers.38': 6,\n",
+       " 'model.layers.39': 7,\n",
+       " 'model.layers.40': 0,\n",
+       " 'model.layers.41': 1,\n",
+       " 'model.layers.42': 2,\n",
+       " 'model.layers.43': 3,\n",
+       " 'model.layers.44': 4,\n",
+       " 'model.layers.45': 5,\n",
+       " 'model.layers.46': 6,\n",
+       " 'model.layers.47': 7,\n",
+       " 'model.layers.48': 0,\n",
+       " 'model.layers.49': 1,\n",
+       " 'model.layers.50': 2,\n",
+       " 'model.layers.51': 3,\n",
+       " 'model.layers.52': 4,\n",
+       " 'model.layers.53': 5,\n",
+       " 'model.layers.54': 6,\n",
+       " 'model.layers.55': 7,\n",
+       " 'model.layers.56': 0,\n",
+       " 'model.layers.57': 1,\n",
+       " 'model.layers.58': 2,\n",
+       " 'model.layers.59': 3,\n",
+       " 'model.layers.60': 4,\n",
+       " 'model.layers.61': 5,\n",
+       " 'model.layers.62': 6,\n",
+       " 'model.layers.63': 7,\n",
+       " 'model.layers.64': 0,\n",
+       " 'model.layers.65': 1,\n",
+       " 'model.layers.66': 2,\n",
+       " 'model.layers.67': 3,\n",
+       " 'model.layers.68': 4,\n",
+       " 'model.layers.69': 5,\n",
+       " 'model.layers.70': 6,\n",
+       " 'model.layers.71': 7,\n",
+       " 'model.layers.72': 0,\n",
+       " 'model.layers.73': 1,\n",
+       " 'model.layers.74': 2,\n",
+       " 'model.layers.75': 3,\n",
+       " 'model.layers.76': 4,\n",
+       " 'model.layers.77': 5,\n",
+       " 'model.layers.78': 6,\n",
+       " 'model.layers.79': 7}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,9 +163,9 @@
    "source": [
     "from src.utils.training_utils import get_device_map\n",
     "\n",
-    "model_key = \"meta-llama/Llama-3.2-1B-Instruct\"\n",
+    "model_key = \"meta-llama/Llama-3.3-70B-Instruct\"\n",
     "\n",
-    "device_map = get_device_map(model_key, 32, 1)\n",
+    "device_map = get_device_map(model_key, 32, n_gpus=8)\n",
     "device_map"
    ]
   },
@@ -99,19 +175,44 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "'/disk/u/gio/mechinterp'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e8baf8d2bbce462285f1720e1d8c3688",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/30 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-06-26 03:17:37 src.models WARNING  meta-llama/Llama-3.2-1B-Instruct not found in data/hf_cache\n",
-      "If not found in cache, model will be downloaded from HuggingFace to cache directory\n",
-      "2025-06-26 03:17:37 urllib3.connectionpool DEBUG    Starting new HTTPS connection (1): huggingface.co:443\n",
-      "2025-06-26 03:17:37 urllib3.connectionpool DEBUG    https://huggingface.co:443 \"HEAD /meta-llama/Llama-3.2-1B-Instruct/resolve/main/config.json HTTP/1.1\" 200 0\n",
-      "2025-06-26 03:17:37 urllib3.connectionpool DEBUG    https://huggingface.co:443 \"HEAD /meta-llama/Llama-3.2-1B-Instruct/resolve/main/tokenizer_config.json HTTP/1.1\" 200 0\n",
-      "2025-06-26 03:17:37 urllib3.connectionpool DEBUG    https://huggingface.co:443 \"GET /api/models/meta-llama/Llama-3.2-1B-Instruct/tree/main/additional_chat_templates?recursive=False&expand=False HTTP/1.1\" 404 64\n",
-      "2025-06-26 03:17:38 accelerate.utils.modeling INFO     We will use 90% of the memory on device 0 for storing the model, and 10% for the buffer to avoid OOM. You can set `max_memory` in to a higher value to use more memory (at your own risk).\n",
-      "2025-06-26 03:17:38 urllib3.connectionpool DEBUG    https://huggingface.co:443 \"HEAD /meta-llama/Llama-3.2-1B-Instruct/resolve/main/generation_config.json HTTP/1.1\" 200 0\n",
-      "2025-06-26 03:17:39 urllib3.connectionpool DEBUG    https://huggingface.co:443 \"HEAD /meta-llama/Llama-3.2-1B-Instruct/resolve/main/custom_generate/generate.py HTTP/1.1\" 404 0\n",
-      "2025-06-26 03:17:39 src.models INFO     loaded model <meta-llama/Llama-3.2-1B-Instruct> | size: 2357.129 MB | dtype: torch.bfloat16 | device: cuda:0\n"
+      "2025-06-27 04:35:25 src.models INFO     loaded model <models/meta-llama/Llama-3.3-70B-Instruct> | size: 134570.516 MB | dtype: torch.bfloat16 | device: cuda:7\n"
      ]
     }
    ],
@@ -295,15 +396,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x: 42\n",
-      "y: hello\n",
       "# Task: Find Common Attributes Between Two People\n",
       "You will be given two people's names. Your job is to determine if they share ANY common attribute from the list below.\n",
       "\n",
@@ -1625,7 +1724,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "retrieval2",
+   "display_name": "retrieval",
    "language": "python",
    "name": "python3"
   },
@@ -1639,7 +1738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
