--- a/probe.ipynb
+++ b/probe.ipynb
@@ -2,40 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting scikit-learn\n",
-      "  Downloading scikit_learn-1.7.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (17 kB)\n",
+      "Requirement already satisfied: scikit-learn in /disk/u/gio/.conda/envs/retrieval/lib/python3.11/site-packages (1.7.0)\n",
       "Requirement already satisfied: numpy>=1.22.0 in /disk/u/gio/.conda/envs/retrieval/lib/python3.11/site-packages (from scikit-learn) (2.3.1)\n",
-      "Collecting scipy>=1.8.0 (from scikit-learn)\n",
-      "  Downloading scipy-1.16.0-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.whl.metadata (61 kB)\n",
+      "Requirement already satisfied: scipy>=1.8.0 in /disk/u/gio/.conda/envs/retrieval/lib/python3.11/site-packages (from scikit-learn) (1.16.0)\n",
       "Requirement already satisfied: joblib>=1.2.0 in /disk/u/gio/.conda/envs/retrieval/lib/python3.11/site-packages (from scikit-learn) (1.5.1)\n",
-      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
-      "  Downloading threadpoolctl-3.6.0-py3-none-any.whl.metadata (13 kB)\n",
-      "Downloading scikit_learn-1.7.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.9 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.9/12.9 MB\u001b[0m \u001b[31m89.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading scipy-1.16.0-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (35.3 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m35.3/35.3 MB\u001b[0m \u001b[31m109.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading threadpoolctl-3.6.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: threadpoolctl, scipy, scikit-learn\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3/3\u001b[0m [scikit-learn][0m [scikit-learn]\n",
-      "\u001b[1A\u001b[2KSuccessfully installed scikit-learn-1.7.0 scipy-1.16.0 threadpoolctl-3.6.0\n"
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /disk/u/gio/.conda/envs/retrieval/lib/python3.11/site-packages (from scikit-learn) (3.6.0)\n"
      ]
     }
    ],
@@ -46,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -208,9 +186,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prepared 40 prompts for probing\n",
+      "Example prompt: 'The famous person Stephen King is known for being a professional'\n",
+      "Corresponding profession label: 12 (writer)\n",
+      "Corresponding nationality label: 0 (American)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'prepare_input' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 28\u001b[39m\n\u001b[32m     25\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCorresponding nationality label: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprobe_labels_nationality[\u001b[32m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00munique_nationalities[probe_labels_nationality[\u001b[32m0\u001b[39m]]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m)\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     27\u001b[39m \u001b[38;5;66;03m# Tokenize all the prompts to understand their structure\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m probe_inputs = \u001b[43mprepare_input\u001b[49m(probe_prompts, tokenizer=mt.tokenizer, return_offsets_mapping=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     29\u001b[39m offset_mappings = probe_inputs.pop(\u001b[33m\"\u001b[39m\u001b[33moffset_mapping\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     31\u001b[39m \u001b[38;5;66;03m# Let's analyze the token structure of our prompts\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'prepare_input' is not defined"
+     ]
+    }
+   ],
    "source": [
     "### Step 2: Extract Activations for Linear Probing\n",
     "\n",
@@ -275,9 +275,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting activations from model...\n",
+      "This may take a few minutes due to the large model size...\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'probe_layer_indices' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     12\u001b[39m probe_locations = []\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# Add all layer-position combinations we're interested in\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m layer_idx \u001b[38;5;129;01min\u001b[39;00m \u001b[43mprobe_layer_indices\u001b[49m:\n\u001b[32m     16\u001b[39m     layer_name = mt.layer_name_format.format(layer_idx)\n\u001b[32m     18\u001b[39m     \u001b[38;5;66;03m# We'll probe at multiple positions:\u001b[39;00m\n\u001b[32m     19\u001b[39m     \u001b[38;5;66;03m# 1. Last token position (like in patchscoping analysis)\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'probe_layer_indices' is not defined"
+     ]
+    }
+   ],
    "source": [
     "### Step 3: Extract Activations from Model\n",
     "\n",
@@ -781,8 +801,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "retrieval",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
