--- a/walkthrough copy.ipynb
+++ b/walkthrough copy.ipynb
@@ -101,13 +101,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-06-29 04:44:37 __main__ INFO     torch.__version__='2.7.1+cu126', torch.version.cuda='12.6'\n",
-      "2025-06-29 04:44:38 __main__ INFO     torch.cuda.is_available()=True, torch.cuda.device_count()=8, torch.cuda.get_device_name()='NVIDIA A100 80GB PCIe'\n",
-      "2025-06-29 04:44:38 __main__ INFO     transformers.__version__='4.53.0'\n",
-      "2025-06-29 04:44:40 git.cmd DEBUG    Popen(['git', 'version'], cwd=/disk/u/gio/mechinterp, stdin=None, shell=False, universal_newlines=False)\n",
-      "2025-06-29 04:44:40 git.cmd DEBUG    Popen(['git', 'version'], cwd=/disk/u/gio/mechinterp, stdin=None, shell=False, universal_newlines=False)\n",
-      "x: 42\n",
-      "y: hello\n",
+      "2025-06-29 09:51:56 __main__ INFO     torch.__version__='2.7.1+cu126', torch.version.cuda='12.6'\n",
+      "2025-06-29 09:51:57 __main__ INFO     torch.cuda.is_available()=True, torch.cuda.device_count()=8, torch.cuda.get_device_name()='NVIDIA A100 80GB PCIe'\n",
+      "2025-06-29 09:51:57 __main__ INFO     transformers.__version__='4.53.0'\n",
+      "2025-06-29 09:51:59 git.cmd DEBUG    Popen(['git', 'version'], cwd=/disk/u/gio/mechinterp, stdin=None, shell=False, universal_newlines=False)\n",
+      "2025-06-29 09:51:59 git.cmd DEBUG    Popen(['git', 'version'], cwd=/disk/u/gio/mechinterp, stdin=None, shell=False, universal_newlines=False)\n",
       "{'model.embed_tokens': 7, 'model.norm': 7, 'model.rotary_emb': 7, 'lm_head': 7, 'model.layers.0': 0, 'model.layers.1': 1, 'model.layers.2': 2, 'model.layers.3': 3, 'model.layers.4': 4, 'model.layers.5': 5, 'model.layers.6': 6, 'model.layers.7': 7, 'model.layers.8': 0, 'model.layers.9': 1, 'model.layers.10': 2, 'model.layers.11': 3, 'model.layers.12': 4, 'model.layers.13': 5, 'model.layers.14': 6, 'model.layers.15': 7, 'model.layers.16': 0, 'model.layers.17': 1, 'model.layers.18': 2, 'model.layers.19': 3, 'model.layers.20': 4, 'model.layers.21': 5, 'model.layers.22': 6, 'model.layers.23': 7, 'model.layers.24': 0, 'model.layers.25': 1, 'model.layers.26': 2, 'model.layers.27': 3, 'model.layers.28': 4, 'model.layers.29': 5, 'model.layers.30': 6, 'model.layers.31': 7, 'model.layers.32': 0, 'model.layers.33': 1, 'model.layers.34': 2, 'model.layers.35': 3, 'model.layers.36': 4, 'model.layers.37': 5, 'model.layers.38': 6, 'model.layers.39': 7, 'model.layers.40': 0, 'model.layers.41': 1, 'model.layers.42': 2, 'model.layers.43': 3, 'model.layers.44': 4, 'model.layers.45': 5, 'model.layers.46': 6, 'model.layers.47': 7, 'model.layers.48': 0, 'model.layers.49': 1, 'model.layers.50': 2, 'model.layers.51': 3, 'model.layers.52': 4, 'model.layers.53': 5, 'model.layers.54': 6, 'model.layers.55': 7, 'model.layers.56': 0, 'model.layers.57': 1, 'model.layers.58': 2, 'model.layers.59': 3, 'model.layers.60': 4, 'model.layers.61': 5, 'model.layers.62': 6, 'model.layers.63': 7, 'model.layers.64': 0, 'model.layers.65': 1, 'model.layers.66': 2, 'model.layers.67': 3, 'model.layers.68': 4, 'model.layers.69': 5, 'model.layers.70': 6, 'model.layers.71': 7, 'model.layers.72': 0, 'model.layers.73': 1, 'model.layers.74': 2, 'model.layers.75': 3, 'model.layers.76': 4, 'model.layers.77': 5, 'model.layers.78': 6, 'model.layers.79': 7}\n",
       "/disk/u/gio/mechinterp\n"
      ]
@@ -166,7 +164,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40812a96ee0c4fa8a855a57be7c1f11c",
+       "model_id": "16345063fcd444869bbaccb6c334565a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -181,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-06-29 04:45:32 src.models INFO     loaded model <models/meta-llama/Llama-3.3-70B-Instruct> | size: 134570.516 MB | dtype: torch.bfloat16 | device: cuda:7\n"
+      "2025-06-29 09:52:44 src.models INFO     loaded model <models/meta-llama/Llama-3.3-70B-Instruct> | size: 134570.516 MB | dtype: torch.bfloat16 | device: cuda:7\n"
      ]
     }
    ],
@@ -192,6 +190,43 @@
     "    torch_dtype=torch.bfloat16,\n",
     "    device_map=device_map,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output.keys(: odict_keys(['last_hidden_state', 'past_key_values', 'attentions'])\n",
+      "logits.shape: torch.Size([128256])\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "expected Tensor as element 0 in argument 0, but got NoneType",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mattention\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_attention_matrices\n\u001b[32m      3\u001b[39m prompt = \u001b[33m\"\u001b[39m\u001b[33mAdam Driver is an\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m attn_info = \u001b[43mget_attention_matrices\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mAttention matrix shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mattn_info.attention_matrices.shape\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mTokens: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mattn_info.tokenized_prompt\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.conda/envs/retrieval/lib/python3.11/site-packages/torch/utils/_contextlib.py:116\u001b[39m, in \u001b[36mcontext_decorator.<locals>.decorate_context\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    113\u001b[39m \u001b[38;5;129m@functools\u001b[39m.wraps(func)\n\u001b[32m    114\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mdecorate_context\u001b[39m(*args, **kwargs):\n\u001b[32m    115\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m ctx_factory():\n\u001b[32m--> \u001b[39m\u001b[32m116\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/mechinterp/src/attention.py:84\u001b[39m, in \u001b[36mget_attention_matrices\u001b[39m\u001b[34m(input, mt, value_weighted, patches)\u001b[39m\n\u001b[32m     79\u001b[39m printer(logits.shape)\n\u001b[32m     81\u001b[39m \u001b[38;5;66;03m# TODO: Uncomment this to optimize for NVIDIA GPUs\u001b[39;00m\n\u001b[32m     82\u001b[39m \u001b[38;5;66;03m#output.attentions = [attn.cuda() for attn in output.attentions]\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m84\u001b[39m attentions = \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvstack\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m.\u001b[49m\u001b[43mattentions\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# (layers, heads, tokens, tokens)\u001b[39;00m\n\u001b[32m     86\u001b[39m \u001b[38;5;66;03m# TODO: Implement value_weighted logic\u001b[39;00m\n\u001b[32m     88\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m AttentionInformation(\n\u001b[32m     89\u001b[39m     prompt=\u001b[38;5;28minput\u001b[39m,\n\u001b[32m     90\u001b[39m     tokenized_prompt=[mt.tokenizer.decode(tok) \u001b[38;5;28;01mfor\u001b[39;00m tok \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28minput\u001b[39m.input_ids[\u001b[32m0\u001b[39m]],\n\u001b[32m     91\u001b[39m     attention_matrices=attentions.detach().cpu().to(torch.float32).numpy(),\n\u001b[32m     92\u001b[39m     logits=logits.detach().cpu(),\n\u001b[32m     93\u001b[39m )\n",
+      "\u001b[31mTypeError\u001b[39m: expected Tensor as element 0 in argument 0, but got NoneType"
+     ]
+    }
+   ],
+   "source": [
+    "from src.attention import get_attention_matrices\n",
+    "\n",
+    "prompt = \"Adam Driver is an\"\n",
+    "attn_info = get_attention_matrices(prompt, mt)\n",
+    "\n",
+    "print(f\"Attention matrix shape: {attn_info.attention_matrices.shape}\")\n",
+    "print(f\"Tokens: {attn_info.tokenized_prompt}\")"
    ]
   },
   {
