--- a/linear_probe.ipynb
+++ b/linear_probe.ipynb
@@ -111,6 +111,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " writer\n"
+     ]
+    }
+   ],
+   "source": [
+    "with mt.trace(\"Stephen King is a professional\") as t:\n",
+    "    output = mt.output.save()\n",
+    "\n",
+    "next_id = output['logits'][:, -1].argmax(dim=-1).tolist()\n",
+    "next_token = mt.tokenizer.decode(next_id[0], skip_special_tokens=True)\n",
+    "print(next_token)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -127,32 +149,175 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Step 2: Extract Hidden States\n",
+    "1. Load the LM\n",
+    "3. For each prompt in dataset:\n",
+    "    1. Tokenize\n",
+    "    2. Find exact token positions for person1 and person2\n",
+    "    3. Run the prompt\n",
+    "    4. Save all intermediate layer outputs\n",
+    "    5. Extract the hidden state vector for person1's tokens at every layer\n",
+    "    6. Extract the hidden state vector for person2's tokens at every layer\n",
+    "    7. For each layer, concatenate person1's vector with person2's vector\n",
+    "    8. Save this concatenated vector with a label like \"prompt_5_layer_12.npy\""
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Step 3: Organize Probe Training Data\n",
+    "- Create a new folder called \"probe_data\"\n",
+    "- For each layer number (1 through 24):\n",
+    "    - Create a subfolder called \"layer_X\"\n",
+    "    - Collect all the vectors from that layer (should be 100 vectors)\n",
+    "    - Create two files: \"layer_X_features.npy\" (all the vectors) and \"layer_X_labels.txt\" (the categories)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Stepo 4: Create the Actual Labels for Classification\n",
+    "\n",
+    "- For each prompt, determine what your probe should predict:\n",
+    "    - IOf both people are writers: label = \"same_profession_writer\", etc.\n",
+    "    - If they're different professions: label=\"different_professions\"\n",
+    "- Convert these text labels to numbers (e.g., 0,1,2,3)\n",
+    "- Save these as target labels for each layer."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Step 5: Train One Probe Per Layer\n",
+    "- For layer 1:\n",
+    "    - Load \"layer_1_features.npy\" and \"layer_1_labels.txt\"\n",
+    "    - Split into 80 training samples, 20 test samples\n",
+    "    - Create a simple linear classifier (logistic regression)\n",
+    "    - Train it: input = layer 1 vectors, output = profession labels\n",
+    "    - Test it on the 20 held-out examples\n",
+    "    - Record the accuracy percentage\n",
+    "    - Save this trained probe as \"probe_layer_1.pkl\"\n",
+    "- Repeat for every layer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 6: Analyze Results\n",
+    "- Create a simple graph with X-axis = layer number (1-24), Y-axis = accuracy (0 - 100%)\n",
+    "- Plot all 24 accuracy scores\n",
+    "- Look for the pattern\n",
+    "    - Early layers should have low accuracy (around 33% - random guessing)\n",
+    "    - There should be a sharp jump somewhere in the middle layers\n",
+    "    - Later layers should plateau at high accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 7: Interpret What You Found\n",
+    "- The layer where accuracy first jumps above 70% = where the model \"realizes\" professional categories\n",
+    "- If the jump happens at layer 8, that means the model needs 8 layers of processing to connect \"Stephen King\" with \"writer\"\n",
+    "- Layers before the jump = model sees them as just random tokens\n",
+    "- Layers after the jump = model has figured out their professions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The exact layer number where accuracy jumps tells you precisely where your model \"gets it\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You're absolutely right. Let me break this down into the most granular, follow-along steps possible:\n",
+    "\n",
+    "**STEP 1: Create Your Exact Dataset**\n",
+    "\n",
+    "1.1. Open a spreadsheet or text file\n",
+    "1.2. Create exactly 3 columns: \"Prompt\", \"Person1_Category\", \"Person2_Category\" \n",
+    "1.3. Fill in exactly 100 rows like this:\n",
+    "   - Row 1: \"Name a connection between Stephen King and Haruki Murakami\", \"writer\", \"writer\"\n",
+    "   - Row 2: \"Name a connection between Einstein and Newton\", \"scientist\", \"scientist\"  \n",
+    "   - Row 3: \"Name a connection between Mozart and Beethoven\", \"composer\", \"composer\"\n",
+    "1.4. Make sure you have exactly 25 writer pairs, 25 scientist pairs, 25 composer pairs, 25 mixed pairs (like \"Stephen King and Einstein\")\n",
+    "1.5. Save this as \"probe_dataset.csv\"\n",
+    "\n",
+    "**STEP 2: Extract Hidden States (This is the critical part everyone skips)**\n",
+    "\n",
+    "2.1. Load your language model using whatever framework you're using\n",
+    "2.2. Set the model to \"evaluation mode\" - no training, just inference\n",
+    "2.3. For each prompt in your dataset, do this exact sequence:\n",
+    "   - 2.3.1. Tokenize the prompt (convert text to numbers the model understands)\n",
+    "   - 2.3.2. Find the exact token positions for Person1 and Person2 names\n",
+    "   - 2.3.3. Run the prompt through the model with a special flag that saves ALL intermediate layer outputs\n",
+    "   - 2.3.4. Extract the hidden state vector for Person1's tokens at EVERY layer (if model has 24 layers, you get 24 vectors)\n",
+    "   - 2.3.5. Extract the hidden state vector for Person2's tokens at EVERY layer \n",
+    "   - 2.3.6. For each layer, concatenate Person1's vector with Person2's vector (stick them together)\n",
+    "   - 2.3.7. Save this concatenated vector with a label like \"prompt_5_layer_12.npy\"\n",
+    "\n",
+    "2.4. After processing all 100 prompts, you should have 2400 files (100 prompts × 24 layers)\n",
+    "\n",
+    "**STEP 3: Organize Your Probe Training Data**\n",
+    "\n",
+    "3.1. Create a new folder called \"probe_data\"\n",
+    "3.2. For each layer number (1 through 24):\n",
+    "   - 3.2.1. Create a subfolder called \"layer_X\" \n",
+    "   - 3.2.2. Collect all the vectors from that layer (should be 100 vectors)\n",
+    "   - 3.2.3. Create two files: \"layer_X_features.npy\" (all the vectors) and \"layer_X_labels.txt\" (the categories)\n",
+    "\n",
+    "**STEP 4: Create the Actual Labels for Classification**\n",
+    "\n",
+    "4.1. For each prompt, determine what your probe should predict:\n",
+    "   - If both people are writers: label = \"same_profession_writer\"\n",
+    "   - If both people are scientists: label = \"same_profession_scientist\"  \n",
+    "   - If they're different professions: label = \"different_professions\"\n",
+    "4.2. Convert these text labels to numbers: same_profession_writer=0, same_profession_scientist=1, different_professions=2\n",
+    "4.3. Save these as your target labels for each layer\n",
+    "\n",
+    "**STEP 5: Train One Probe Per Layer**\n",
+    "\n",
+    "5.1. For layer 1:\n",
+    "   - 5.1.1. Load \"layer_1_features.npy\" and \"layer_1_labels.txt\"\n",
+    "   - 5.1.2. Split into 80 training examples, 20 test examples\n",
+    "   - 5.1.3. Create a simple linear classifier (logistic regression)\n",
+    "   - 5.1.4. Train it: input = layer 1 vectors, output = profession labels\n",
+    "   - 5.1.5. Test it on the 20 held-out examples\n",
+    "   - 5.1.6. Record the accuracy percentage\n",
+    "   - 5.1.7. Save this trained probe as \"probe_layer_1.pkl\"\n",
+    "\n",
+    "5.2. Repeat step 5.1 for layers 2, 3, 4... all the way to 24\n",
+    "5.3. You should end up with 24 trained probes and 24 accuracy scores\n",
+    "\n",
+    "**STEP 6: Analyze Results**\n",
+    "\n",
+    "6.1. Create a simple graph with X-axis = layer number (1-24), Y-axis = accuracy (0-100%)\n",
+    "6.2. Plot all 24 accuracy scores\n",
+    "6.3. Look for the pattern: \n",
+    "   - Early layers should have low accuracy (around 33% - random guessing)\n",
+    "   - There should be a sharp jump somewhere in the middle layers\n",
+    "   - Later layers should plateau at high accuracy\n",
+    "\n",
+    "**STEP 7: Interpret What You Found**\n",
+    "\n",
+    "7.1. The layer where accuracy first jumps above 70% = where the model \"realizes\" professional categories\n",
+    "7.2. If the jump happens at layer 8, that means the model needs 8 layers of processing to connect \"Stephen King\" with \"writer\"\n",
+    "7.3. Layers before the jump = model sees them as just random tokens\n",
+    "7.4. Layers after the jump = model has figured out their professions\n",
+    "\n",
+    "The key insight: The exact layer number where accuracy jumps tells you precisely when your model \"gets it.\""
+   ]
   },
   {
    "cell_type": "code",
