--- a/first_attn_look.ipynb
+++ b/first_attn_look.ipynb
@@ -1724,7 +1724,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "retrieval",
+   "display_name": "retrieval-env",
    "language": "python",
    "name": "python3"
   },
@@ -1738,7 +1738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
