--- a/odd_one_out_demo.ipynb
+++ b/odd_one_out_demo.ipynb
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "e849240d-2deb-4ea2-a371-e879f8d4c3a3",
    "metadata": {},
    "outputs": [
@@ -590,17 +590,11 @@
      "output_type": "stream",
      "text": [
       "['Isaac Newton', 'Brad Pitt', 'Leonardo DiCaprio'] => Isaac Newton | ['\" I\"[314] (p=0.047, logit=-149.000)', '\" The\"[383] (p=0.047, logit=-149.000)', '\" It\"[632] (p=0.017, logit=-150.000)', '\" He\"[679] (p=0.017, logit=-150.000)', '\" You\"[921] (p=0.017, logit=-150.000)', \"{'Isa': {'logit': -160.0, 'prob': 7.911264106041926e-07, 'token_id': 39443}, 'Brad': {'logit': -160.0, 'prob': 7.911264106041926e-07, 'token_id': 30805}, 'Leon': {'logit': -160.0, 'prob': 7.911264106041926e-07, 'token_id': 36185}}\"]\n",
-      "[PredictedToken(token=' I', prob=0.04736328125, logit=-149.0, token_id=314, metadata=None), PredictedToken(token=' The', prob=0.04736328125, logit=-149.0, token_id=383, metadata=None), PredictedToken(token=' It', prob=0.0174560546875, logit=-150.0, token_id=632, metadata=None), PredictedToken(token=' He', prob=0.0174560546875, logit=-150.0, token_id=679, metadata=None), PredictedToken(token=' You', prob=0.0174560546875, logit=-150.0, token_id=921, metadata=None), {'Isa': {'logit': -160.0, 'prob': 7.911264106041926e-07, 'token_id': 39443}, 'Brad': {'logit': -160.0, 'prob': 7.911264106041926e-07, 'token_id': 30805}, 'Leon': {'logit': -160.0, 'prob': 7.911264106041926e-07, 'token_id': 36185}}]\n",
       "['Isaac Newton', 'Albert Einstein', 'Leonardo DiCaprio'] => Leonardo DiCaprio | ['\" I\"[314] (p=0.060, logit=-149.000)', '\" The\"[383] (p=0.022, logit=-150.000)', '\" It\"[632] (p=0.022, logit=-150.000)', '\" You\"[921] (p=0.022, logit=-150.000)', '\" If\"[1002] (p=0.022, logit=-150.000)', \"{'Isa': {'logit': -160.0, 'prob': 9.936701417245786e-07, 'token_id': 39443}, 'Albert': {'logit': -161.0, 'prob': 3.6555076121658203e-07, 'token_id': 42590}, 'Leon': {'logit': -160.0, 'prob': 9.936701417245786e-07, 'token_id': 36185}}\"]\n",
-      "[PredictedToken(token=' I', prob=0.0595703125, logit=-149.0, token_id=314, metadata=None), PredictedToken(token=' The', prob=0.0218505859375, logit=-150.0, token_id=383, metadata=None), PredictedToken(token=' It', prob=0.0218505859375, logit=-150.0, token_id=632, metadata=None), PredictedToken(token=' You', prob=0.0218505859375, logit=-150.0, token_id=921, metadata=None), PredictedToken(token=' If', prob=0.0218505859375, logit=-150.0, token_id=1002, metadata=None), {'Isa': {'logit': -160.0, 'prob': 9.936701417245786e-07, 'token_id': 39443}, 'Albert': {'logit': -161.0, 'prob': 3.6555076121658203e-07, 'token_id': 42590}, 'Leon': {'logit': -160.0, 'prob': 9.936701417245786e-07, 'token_id': 36185}}]\n",
       "['Stephen King', 'Mark Twain', 'Usain Bolt'] => Usain Bolt | ['\" I\"[314] (p=0.089, logit=-150.000)', '\" The\"[383] (p=0.033, logit=-151.000)', '\" It\"[632] (p=0.033, logit=-151.000)', '\" You\"[921] (p=0.033, logit=-151.000)', '\" That\"[1320] (p=0.033, logit=-151.000)', \"{'Stephen': {'logit': -160.0, 'prob': 4.0407512642559595e-06, 'token_id': 24920}, 'Mark': {'logit': -161.0, 'prob': 1.4865094044580474e-06, 'token_id': 9704}, 'Us': {'logit': -164.0, 'prob': 7.400894475040332e-08, 'token_id': 5842}}\"]\n",
-      "[PredictedToken(token=' I', prob=0.0888671875, logit=-150.0, token_id=314, metadata=None), PredictedToken(token=' The', prob=0.03271484375, logit=-151.0, token_id=383, metadata=None), PredictedToken(token=' It', prob=0.03271484375, logit=-151.0, token_id=632, metadata=None), PredictedToken(token=' You', prob=0.03271484375, logit=-151.0, token_id=921, metadata=None), PredictedToken(token=' That', prob=0.03271484375, logit=-151.0, token_id=1320, metadata=None), {'Stephen': {'logit': -160.0, 'prob': 4.0407512642559595e-06, 'token_id': 24920}, 'Mark': {'logit': -161.0, 'prob': 1.4865094044580474e-06, 'token_id': 9704}, 'Us': {'logit': -164.0, 'prob': 7.400894475040332e-08, 'token_id': 5842}}]\n",
       "['Lionel Messi', 'Mark Twain', 'Usain Bolt'] => Mark Twain | ['\" I\"[314] (p=0.045, logit=-146.000)', '\" The\"[383] (p=0.045, logit=-146.000)', '\" It\"[632] (p=0.045, logit=-146.000)', '\" You\"[921] (p=0.045, logit=-146.000)', '\" We\"[775] (p=0.017, logit=-147.000)', \"{'L': {'logit': -155.0, 'prob': 5.587879968516063e-06, 'token_id': 43}, 'Mark': {'logit': -156.0, 'prob': 2.0556660729198484e-06, 'token_id': 9704}, 'Us': {'logit': -159.0, 'prob': 1.0234558089905477e-07, 'token_id': 5842}}\"]\n",
-      "[PredictedToken(token=' I', prob=0.045166015625, logit=-146.0, token_id=314, metadata=None), PredictedToken(token=' The', prob=0.045166015625, logit=-146.0, token_id=383, metadata=None), PredictedToken(token=' It', prob=0.045166015625, logit=-146.0, token_id=632, metadata=None), PredictedToken(token=' You', prob=0.045166015625, logit=-146.0, token_id=921, metadata=None), PredictedToken(token=' We', prob=0.0166015625, logit=-147.0, token_id=775, metadata=None), {'L': {'logit': -155.0, 'prob': 5.587879968516063e-06, 'token_id': 43}, 'Mark': {'logit': -156.0, 'prob': 2.0556660729198484e-06, 'token_id': 9704}, 'Us': {'logit': -159.0, 'prob': 1.0234558089905477e-07, 'token_id': 5842}}]\n",
       "['Barack Obama', 'Bob Dylan', 'George Bush'] => Bob Dylan | ['\" I\"[314] (p=0.077, logit=-151.000)', '\" The\"[383] (p=0.028, logit=-152.000)', '\" It\"[632] (p=0.028, logit=-152.000)', '\" You\"[921] (p=0.028, logit=-152.000)', '\" That\"[1320] (p=0.028, logit=-152.000)', \"{'Bar': {'logit': -163.0, 'prob': 4.750455104840512e-07, 'token_id': 10374}, 'Bob': {'logit': -161.0, 'prob': 3.5101379580737557e-06, 'token_id': 18861}, 'George': {'logit': -161.0, 'prob': 3.5101379580737557e-06, 'token_id': 20191}}\"]\n",
-      "[PredictedToken(token=' I', prob=0.0771484375, logit=-151.0, token_id=314, metadata=None), PredictedToken(token=' The', prob=0.0284423828125, logit=-152.0, token_id=383, metadata=None), PredictedToken(token=' It', prob=0.0284423828125, logit=-152.0, token_id=632, metadata=None), PredictedToken(token=' You', prob=0.0284423828125, logit=-152.0, token_id=921, metadata=None), PredictedToken(token=' That', prob=0.0284423828125, logit=-152.0, token_id=1320, metadata=None), {'Bar': {'logit': -163.0, 'prob': 4.750455104840512e-07, 'token_id': 10374}, 'Bob': {'logit': -161.0, 'prob': 3.5101379580737557e-06, 'token_id': 18861}, 'George': {'logit': -161.0, 'prob': 3.5101379580737557e-06, 'token_id': 20191}}]\n",
-      "['Barack Obama', 'Bob Dylan', 'John Lennon'] => Barack Obama | ['\" I\"[314] (p=0.057, logit=-150.000)', '\" The\"[383] (p=0.057, logit=-150.000)', '\" It\"[632] (p=0.021, logit=-151.000)', '\" He\"[679] (p=0.021, logit=-151.000)', '\" You\"[921] (p=0.021, logit=-151.000)', \"{'Bar': {'logit': -162.0, 'prob': 3.4839297313737916e-07, 'token_id': 10374}, 'Bob': {'logit': -160.0, 'prob': 2.5742951947904658e-06, 'token_id': 18861}, 'John': {'logit': -159.0, 'prob': 6.997660420893226e-06, 'token_id': 7554}}\"]\n",
-      "[PredictedToken(token=' I', prob=0.056640625, logit=-150.0, token_id=314, metadata=None), PredictedToken(token=' The', prob=0.056640625, logit=-150.0, token_id=383, metadata=None), PredictedToken(token=' It', prob=0.0208740234375, logit=-151.0, token_id=632, metadata=None), PredictedToken(token=' He', prob=0.0208740234375, logit=-151.0, token_id=679, metadata=None), PredictedToken(token=' You', prob=0.0208740234375, logit=-151.0, token_id=921, metadata=None), {'Bar': {'logit': -162.0, 'prob': 3.4839297313737916e-07, 'token_id': 10374}, 'Bob': {'logit': -160.0, 'prob': 2.5742951947904658e-06, 'token_id': 18861}, 'John': {'logit': -159.0, 'prob': 6.997660420893226e-06, 'token_id': 7554}}]\n"
+      "['Barack Obama', 'Bob Dylan', 'John Lennon'] => Barack Obama | ['\" I\"[314] (p=0.057, logit=-150.000)', '\" The\"[383] (p=0.057, logit=-150.000)', '\" It\"[632] (p=0.021, logit=-151.000)', '\" He\"[679] (p=0.021, logit=-151.000)', '\" You\"[921] (p=0.021, logit=-151.000)', \"{'Bar': {'logit': -162.0, 'prob': 3.4839297313737916e-07, 'token_id': 10374}, 'Bob': {'logit': -160.0, 'prob': 2.5742951947904658e-06, 'token_id': 18861}, 'John': {'logit': -159.0, 'prob': 6.997660420893226e-06, 'token_id': 7554}}\"]\n"
      ]
     }
    ],
@@ -639,7 +633,7 @@
     "        })\n",
     "\n",
     "        targets.append(target)\n",
-    "        print(next_tok_probs[0])\n",
+    "        #print(next_tok_probs[0])\n",
     "\n",
     "        processed_tokens = []\n",
     "        for item in next_tok_probs[0]:\n",
@@ -656,6 +650,28 @@
     "    results[professions[0]] = {\n",
     "        \"results\": ooo_results\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "bcede7f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[' I', ' The', ' It', ' You', ' That', 'Bar', 'Bob', 'George'],\n",
+       " [' I', ' The', ' It', ' He', ' You', 'Bar', 'Bob', 'John']]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions"
    ]
   },
   {
